--- a/3.2.6/OOPS(Exercises+Notes).ipynb
+++ b/3.2.6/OOPS(Exercises+Notes).ipynb
@@ -54,6 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In Python, the constructor function is defined using the `__init__` method. This method is called automatically when an instance (object) of a class is created.\n",
     "`setattr(Class, obj.__name__, obj)`: This dynamically adds the function obj to the class Class. The attribute name will be `obj.__name__` (i.e., the name of the function), and the value will be the function obj.\n",
     "\n",
     "- `add_to_class(A)` is called, passing the class A as the Class argument.\n",
